# pyezml

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test_pandas_pipe.py
examples/: pipeline_usage.ipynb  pyezml_demo.ipynb  pyezml_demo_v0_2_0.ipynb
ezml/: __init__.py  automodel.py  helpers.py  persistence.py  pipeline.py
ezml/datasets/: __init__.py  sample.py  synthetic.py
ezml/synthetic_data_generator/: __init__.py  classification.py  distributions.py  regression.py  utils.py
