[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyezml"
version = "0.2.0"
description = "Beginner-friendly AutoML library for tabular data"
readme = "README.md"
authors = [
  { name="Ajay Ray Samala", email="ajaysamala51@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
  "pandas",
  "numpy",
  "scikit-learn",
  "joblib",
  "lightgbm"
]

keywords = ["automl", "machine learning", "python", "ml", "tabular"]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]